Fix line wrapping on Android

--- a/src/styles/modules/_font.sass
+++ b/src/styles/modules/_font.sass
@@ -6,7 +6,7 @@
 
     span
       padding: 0
-      display: inline-block
+      display: inline
 
 =terminal-font-small
   font-size: 12px
